<resources>
    <string name="app_name">MisAficiones</string>
    <string name="title_activity_aficiones">Aficiones</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_me">Sobre Mí</string>
    <string name="fav">Favorita</string>
    <string name="git">KittyHub</string>
    <string name="nombreMichi">Yoshi</string>
    <string name="dormir">Sleep</string>
    <string name="comer">Eat</string>
    <string name="molestar">Be free</string>
    <string name="alimentar">Feed</string>
    <string name="catFood">Kibble</string>
    <string name="steak">Steak</string>
    <string name="pollo">Chicken</string>



</resources>