<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/dormirGLH1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="100dp" />

    <TextView
        android:id="@+id/textoComer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comer"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:fontFamily="@font/letra"
        app:layout_constraintTop_toTopOf="@id/dormirGLH1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/ChooseFood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="My favourite foods"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textoComer"
        android:textSize="25sp"
        android:fontFamily="@font/letra"
        android:layout_marginTop="50dp"
        />

    <ImageView
        android:id="@+id/catFood"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/comidagato"
        app:layout_constraintTop_toBottomOf="@id/ChooseFood"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="50dp"
    />
    <TextView
        android:id="@+id/kibble"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/catFood"
        android:textSize="20sp"
        android:fontFamily="@font/letra"
        app:layout_constraintTop_toBottomOf="@id/catFood"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="50dp"
    />

    <ImageView
        android:id="@+id/steakImg"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/carne"
        app:layout_constraintTop_toBottomOf="@id/ChooseFood"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="50dp"
        />
    <TextView
        android:id="@+id/steak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/steak"
        android:textSize="20sp"
        android:fontFamily="@font/letra"
        app:layout_constraintTop_toBottomOf="@id/steakImg"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="50dp"
        />

    <ImageView
        android:id="@+id/chickenImg"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/pollo"
        app:layout_constraintTop_toBottomOf="@id/steak"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        />
    <TextView
        android:id="@+id/chicken"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pollo"
        android:textSize="20sp"
        android:fontFamily="@font/letra"
        app:layout_constraintTop_toBottomOf="@id/chickenImg"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        />


</androidx.constraintlayout.widget.ConstraintLayout>